--- a/css/app.css
+++ b/css/app.css
@@ -91,8 +91,73 @@ body{
 .post p{
   text-align: justify;
   font-family: 'Comfortaa', cursive;
-  margin: 1px 8px;
+  margin: 1px 15px;
+  color: black;
 }
-.card-img{  
+.card-img{
   text-align: center;
+  margin: 0 15px;
+}
+.card-img img{
+  width: 70%;
+}
+
+.img-comment img{
+  width: 75%;
+}
+
+.comentario-historial p{
+  text-align: justify;
+  font-size: 0.8em;
+  color: white;
+}
+
+
+footer{
+  background-color: #039be5;
+  opacity: 0.89;
+  min-height: 10%;
+  padding-top: 10px;
+}
+@media screen and (max-width:450px){
+  footer h3{
+    font-size: 1.5em;
+  }
+}
+
+footer h3{
+  font-weight: bolder;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.blog p{
+  color: white;
+}
+
+.contactos p{
+  color: white;
+}
+
+.redes-footer ul{
+  list-style: none;
+}
+.redes-footer ul li img{
+  width: 30px;
+}
+
+.menu li img:first-child{
+  margin-left: 10px;
+}
+
+.back-copy{
+  background-color: black;
+  opacity:0.5;
+  width: 100%;
+}
+
+.back-copy p {
+  text-align: center;
+  color: white!important;
+  font-weight: bold;
+  margin-top: 2px;
 }
